--- a/Pong Arena/Pong Arena.csproj
+++ b/Pong Arena/Pong Arena.csproj
@@ -62,7 +62,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Balls.png" />
-    <Content Include="Content\GameOver.png" />
+    <Content Include="Content\GameOver.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\MainMenu.png" />
     <Content Include="Content\Paddle1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
