Winner specific gameoverscreen and restart-on-space function

--- a/Pong Arena/Pong Arena.csproj
+++ b/Pong Arena/Pong Arena.csproj
@@ -65,6 +65,12 @@
     <Content Include="Content\GameOver.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\GameOver1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\GameOver2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\MainMenu.png" />
     <Content Include="Content\Paddle1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
