yet another sprite abilitiesBar fix

--- a/Pong Arena/Pong Arena.csproj
+++ b/Pong Arena/Pong Arena.csproj
@@ -54,7 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\abilitieBar.png">
+    <Content Include="Content\abilitiesBar.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Background MainMenu.png" />
